# agent-collaboration-patterns

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: compare_patterns.py
src/patterns/: __init__.py  consensus_pattern.py  debate_pattern.py  pipeline_pattern.py  supervisor_pattern.py  swarm_pattern.py
tests/: test_patterns.py
