[project]
name = "agent-collaboration-patterns"
version = "0.1.0"
description = "Multi-agent collaboration patterns for enterprise environments"
authors = [{name = "Sainath Pattipati"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "asyncio-contextmanager>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
